<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/welcomeFingerprintTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_fingerprint_title"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/welcomeFingerprintSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:text="@string/welcome_fingerprint_subtitle"
                android:textAlignment="center" />

            <Button
                android:id="@+id/welcomeFingerprintCancel"
                style="@style/AppTheme.CustomRoundButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:onClick="goToNext"
                android:text="@string/welcome_fingerprint_cancel" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>