<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profListCoordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.speedyblur.kretaremastered.ProfileListActivity">

    <ViewFlipper
        android:id="@+id/profileSelectorFlipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minHeight="8dp"
            android:padding="16dp">

            <TextView
                android:id="@+id/welcomeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_title"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/welcomeSubTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/welcomeTitle"
                android:layout_marginBottom="8dp"
                android:text="@string/welcome_subtitle"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/emptyListViewText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcomeSubTitle"
                android:text="@string/empty_profilelist"
                android:visibility="gone" />

            <ListView
                android:id="@+id/profileList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@id/emptyListViewText"
                android:divider="@null" />

            <Button
                android:id="@+id/addProfileButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/profileList"
                android:onClick="goToNewProfile"
                android:text="@string/profile_add" />
        </RelativeLayout>

        <ProgressBar
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </ViewFlipper>

</android.support.design.widget.CoordinatorLayout>
